// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check core function support escape path get 1`] = `
Object {
  "d": Object {
    "e": Object {
      "arr": Array [
        Object {
          "f": true,
        },
        Object {
          "f": true,
        },
      ],
    },
  },
  "y": true,
}
`;

exports[`check core function support escape path set 1`] = `999`;

exports[`check core function support input array paths get 1`] = `
Object {
  "d": Object {
    "e": Object {
      "arr": Array [
        Object {
          "f": true,
        },
        Object {
          "f": true,
        },
      ],
    },
  },
  "x": true,
}
`;

exports[`check core function support input array paths set 1`] = `999`;
